--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
+		"autoprefixer": "^10.4.21",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-oxlint": "^1.14.0",
@@ -32,12 +33,16 @@
 		"globals": "^16.0.0",
 		"mdsvex": "^0.12.3",
 		"oxlint": "^1.14.0",
+		"postcss": "^8.5.6",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
+		"sass": "^1.92.0",
+		"sass-embedded": "^1.92.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
-		"tailwindcss": "^4.0.0",
+		"svelte-preprocess": "^6.0.3",
+		"tailwindcss": "^4.1.12",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^7.0.4"
