--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
 		"eslint-plugin-oxlint": "^1.14.0",
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
-		"mdsvex": "^0.12.3",
 		"oxlint": "^1.14.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
@@ -44,6 +43,9 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
-		"@tabler/icons-svelte": "^3.35.0"
+		"@tabler/icons-svelte": "^3.35.0",
+		"highlight.js": "^11.11.1",
+		"marked": "^17.0.0",
+		"marked-highlight": "^2.2.3"
 	}
 }
